# xiaoai_speaker_hack

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md  burn_partion.md  compile_commands.json  pack_rootfs.sh  toolchain.cmake
install/include/: lws_config.h
install/lib/: libasound.so.2.0.0  libcrypto.so.1.0.0  libcrypto.so.1.1  libcurl.la  libcurl.so.4.5.0  libcurl.so.4.8.0  libjson-c.so.2.0.2  libopus.la  libopus.so.0.6.1  libopus.so.0.8.0  libopusfile.la  libopusfile.so.0.4.5  libopusurl.la  libopusurl.so.0.4.5  libssl.so.1.0.0  libssl.so.1.1
rootfs/: init
rootfs/etc/: asound.conf  asound.conf.dts  asound.state  banner  dnsmasq.conf  dnsmasq.conf.ap  inittab  openwrt_release  openwrt_version  pam.conf  shadow  sn_head_list  sysctl.conf  syslog-ng.conf
rootfs/etc/bluetooth/: main.conf
rootfs/etc/bt/: mibt_uuid.json  rsa_pub.key
rootfs/etc/config/: dropbear  network
rootfs/etc/crontabs/: root
rootfs/etc/dropbear/: authorized_keys
rootfs/etc/init.d/: adbd  alarm  bluetooth  bluetooth_aplay  bluetooth_ble  bluetoothd  boot  boot-test-end  boot-test-start  central_lite  chat_gpt  coredump  dhcpc  dhcpc_p2p  dhcpd  dlnainit  dnsmasq  done  dropbear  idmruntime  led  logrotate  mediaplayer  messagingagent  mibrain_service  mibt_mesh  mico_ai_crontab  mico_aivs_lab  mico_helper  mico_ir_agent  miio  miio_agent  miio_client  miio_mpkg  miplay  mitv-disc  nano_httpd  odhcp6c  pns_ubus_helper  quickplayer  (+7 more)
rootfs/etc/modules-boot.d/: 10-auxin  10-btuart
rootfs/etc/modules.d/: 10-btuart  30-sound-core
rootfs/etc/opkg/keys/: f82576791c4e25ce
rootfs/etc/pam.d/: common-auth  sshd
rootfs/etc/rc.d/: K1boot-test-end  K98boot-test-start  S40sound_effect  S55pns  S61linein  S62miio_agent  S62miio_client  S70mico_helper  S79idmruntime  S81miio_mpkg  S85mico_aivs_lab  S96mico_ir_agent  S97chat_gpt
rootfs/etc/ssl/certs/: 5a7722fb.0  66445960.0
rootfs/etc/tts/: tts_normal.conf  tts_wake.conf
rootfs/etc/uci-defaults/: 02_network
rootfs/etc/workday/: unnomal_holiday.cfg  unnomal_holiday.cfg.TW  unnomal_workday.cfg  unnomal_workday.cfg.TW
rootfs/lib/: libgcc_s.so.1  libgfortran.so.4.0.0  libgomp.so.1.0.0  libpam.so.0.84.1  libpam_misc.so.0.82.1  libpamc.so.0.82.1  libssp.so.0.0.0  meson.sh
rootfs/lib/firmware/mrvl/: WlanCalData_ext.conf  bt_init_cfg.conf  init_cfg.conf
rootfs/lib/firmware/nxp/: WlanCalData_ext_8987.conf  ed_mac_ctrl_V3_8987.conf  robust_btc.conf  wifi_mod_para.conf
rootfs/lib/firmware/rtlbt/: bdaddr  rtl8821c_config  rtl8821c_fw
rootfs/lib/firmware/rtlwifi/: wifi_efuse_8821cs.map  wifimac.txt
rootfs/lib/modules/4.9.61/: 8821cs.ko  auxin.ko  aw20054.ko  bt8xxx.ko  btintel.ko  btusb.ko  cfg80211.ko  (+47 more)
rootfs/lib/netifd/: odhcp6c-script.sh
rootfs/lib/preinit/: 01_preinit.sh
rootfs/sbin/: askfirst  init  jffs2reset  kmodloader  mount_root  mtd  procd  ubusd  uci  udevtrigger  upgraded  validate_data
rootfs/usr/lib/: libFLAC.so.8.3.0  libasound.la  libasound.so.2.0.0  libattr.so.1.1.2448  libbluetooth.so.3.18.10  libcares.so.2.2.0  libcoap-1.so.0.0.0  libconfig++.so.11.0.2  libconfig.so.11.0.2  libcrypto.so.1.0.0  libcrypto.so.1.1  libcurl.so.4.4.0  libcurl.so.4.8.0  libdbi.so.1.1.0  libdbus-1.so.3.14.5  libevent-2.0.so.5.1.10  libevent_core-2.0.so.5.1.10  libevent_extra-2.0.so.5.1.10  libevent_openssl-2.0.so.5.1.10  libevent_pthreads-2.0.so.5.1.10  libevtlog.so.0.0.0  libexpat.so.1.6.7  libfdk-aac.so.2.0.2  libffi.so.6.0.4  libformw.so.6.0  libgflags.so.2.2.2  libgflags_nothreads.so.2.2.2  libgio-2.0.so.0.5501.0  libglib-2.0.so.0.5501.0  libglog.so.0  libgmodule-2.0.so.0.5501.0  libgmp.so.10.3.2  libgnutls.so.30.14.8  libgobject-2.0.so.0.5501.0  libgssdp-1.0.so.3.0.1  libgthread-2.0.so.0.5501.0  libgupnp-1.0.so.4.0.1  libhistory.so.7.0  libhogweed.so.4.3  libical.so.0.48.0  (+43 more)
rootfs/usr/sbin/: alsactl  boot_function.sh  collect_log.sh  dbus-daemon  dnsmasq  dropbear  easy_logcut  flash_erase  hostapd  htpdate  hwstamp_ctl  iw  memtester  mkhomedir_helper  mlanutl  nandwrite  odhcp6c  odhcpd  pam_tally  pam_tally2  pam_timestamp_check  phc2sys  phc_ctl  pmc  ptp4l  rotate_stat_points  rtk_hciattach  rtlbtmp  rtwpriv  syslog-ng  tcpdump  timemaster  tts_play.sh  ubiattach  ubiblock  ubicrc32  ubidetach  ubiformat  ubimkvol  ubinfo  (+13 more)
rootfs/usr/share/: sound
src/: AudioBuffer.h  CMakeLists.txt  Conversation.cpp  Conversation.h  CustomWebSocketClient.cpp  CustomWebSocketClient.h  HttpAPI.cpp  HttpAPI.h  RealTimeClient.cpp  RealTimeClient.h  ThreadTimer.hpp  Utils.cpp  Utils.h  WebRTCClient.cpp  WebRTCClient.h  WebRTCManager.cpp  WebRTCManager.h  WebSocketClient.cpp  WebSocketClient.h  http.cpp  main.cpp  main.h  media.cpp  session.cpp  session.h  ubus.cpp  ubus.h  utils.cpp  utils.h  webrtc.cpp  websockets.cpp
(+249 files in other folders)
